--- a/styles/base.css
+++ b/styles/base.css
@@ -54,8 +54,10 @@ body {
 
 #contactPageContent {
 	grid-column: 1 / 13;
+	grid-row: 4 / 13;
 }
 
 #animalPageContent {
 	grid-column: 3 / 13;
+	grid-column: 4 / 13;
 }
