--- a/styles/base.css
+++ b/styles/base.css
@@ -59,8 +59,13 @@ body {
 }
 
 #animalPageContent {
-	grid-column: 3 / 13;
 	grid-column: 4 / 13;
+	grid-row: 4 / 13;
+}
+
+#animalLinks {
+	grid-column: 1 / 3;
+	grid-row: 4 / 13;
 }
 
 #animalLinks a {
@@ -68,4 +73,5 @@ body {
 	clear: both;
 	overflow: auto;
 	text-align: center;
+	width: 90%;
 }
