--- a/styles/base.css
+++ b/styles/base.css
@@ -54,17 +54,22 @@ body {
 	margin-right: 2%;
 	margin-top: 0.5%;
 	margin-bottom: 0.5%;
+	border-radius: 5px;
 }
 
 #contactPageContent {
 	grid-column: 1 / 13;
 	grid-row: 4 / 13;
+	border: solid black 5px;
+	background-color: #C4A484;
 }
 
 #animalPageContent {
-	grid-column: 4 / 13;
+	grid-column: 3 / 13;
 	grid-row: 4 / 13;
-	padding: 10px
+	padding: 10px;
+	border: solid black 5px;
+	background-color: #C4A484;
 }
 
 #animalPageContent img {
@@ -75,29 +80,40 @@ body {
 #animalLinks {
 	grid-column: 1 / 3;
 	grid-row: 4 / 13;
+	border: solid black 5px;
+	background-color: #C4A484;
 }
 
 #animalLinks a {
 	float: left;
 	clear: both;
-	overflow: auto;
-	text-align: center;
+	border: solid black 1px;
+	border-radius: 5px;
 	width: 90%;
+	text-align: center;
+	margin: 4%;
 }
 
 #contactPageContent {
 	grid-column: 1 / 13;
 	grid-row: 4 / 10;
 	padding: 10%;
+	border: solid black 5px;
+	background-color: #C4A484;
 }
 
 #aboutPage {
 	grid-row: 4;
 	grid-column: 1/ 13;
+	border: solid black 5px;
+	background-color: #C4A484;
+	padding: 5px;
 }
 
 .quiz {
 	grid-column: 1 / 13;
+	border: solid black 5px;
+	background-color: #C4A484;
 }
 
 #sloth {
@@ -106,21 +122,38 @@ body {
 }
 
 #logo {
-	grid-column: 1 / 13;
-	grid-row: 5;
-	margin-left: auto;
+	margin-left: 10%;
 	margin-right: auto;
 }
 
 #indexPageContent {
 	grid-column: 1 / 13;
 	grid-row: 4;
+	border: solid black 5px;
+	background-color: #C4A484;
+	padding: 10px;
 }
 
 #login {
 	grid-column: 1 / 13;
+	border: solid black 5px;
+	background-color: #C4A484;
 }
 
 #register {
 	grid-column: 1 / 13;
+	border: solid black 5px;
+	background-color: #C4A484;
+}
+
+#form {
+	margin: 5%;
+	padding: 5%;
+	border: solid black 1px;
+}
+
+#loginForm {
+	margin: 5%;
+	padding: 5%;
+	border: solid black 1px;
 }
